--- a/develop/force-app/main/default/lwc/contactList/contactList.html
+++ b/develop/force-app/main/default/lwc/contactList/contactList.html
@@ -1,9 +1,13 @@
 <template>
+    <template if:true={errors}>
+        <p>{errors}</p>
+    </template>
     <lightning-card>
         <lightning-datatable
+            key-field="id"
             data={contacts.data}
             columns={columns}
         >
         </lightning-datatable>
-    </lightning-card>
+    </lightning-card>    
 </template>
